# iterminal

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test-new-features.sh  tsconfig.json  vite.config.ts  vitest.config.ts  需求文档.md
.claude/: settings.local.json
.github/workflows/: release.yml
.qwen/: settings.json
mcp/: AGENTS.md  README.md  package-lock.json  package.json  server.json
mcp/iterminal-mcp/: AGENTS.md
mcp/src/: index.ts
playwright-report/: index.html
screenshots/: screenshot1-connections.html  screenshot2-terminal.html  screenshot3-filemanager.html  screenshot4-monitor.html
scripts/: generate-installer-images.html  generate-installer-images.js  generate-installer-images.mjs  generate-screenshots.js  update-screenshots.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db/: schema.sql
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: AGENTS.md  api.rs  db.rs  license.rs  mod.rs  sftp.rs  ssh.rs  system.rs  window.rs  window_theme.rs
src-tauri/src/db/: crypto.rs
src/components/: AGENTS.md  FileManagerPanel.tsx  GhostTextOverlay.tsx  McpLogPanel.tsx  MonitorPanel.tsx  RightSidebar.tsx  SettingsPanel.tsx  Sidebar.tsx  SplashScreen.css  SplashScreen.tsx  ThemeProvider.tsx  TitleBar.tsx  TransferManagerPanel.tsx
src/components/fileManager/: AGENTS.md  ContextMenu.tsx  FileList.tsx  FileToolbar.tsx  Modals.tsx  index.ts  types.ts  utils.ts
src/components/fileManager/hooks/: useDragDrop.ts  useFileManager.ts  useFileOperations.ts  useTransfer.ts
src/components/terminal/: TerminalContainer.tsx  TerminalPane.tsx  TerminalSearchBar.tsx  TerminalTabs.tsx  TerminalToolbar.tsx  index.ts
src/config/: constants.ts
src/constants/: commandBlacklist.ts
src/hooks/: useAppInitialization.ts  useWindowState.ts
src/hooks/terminal/: index.ts  types.ts  useTerminalSearch.ts  useTerminals.ts
src/pages/: AGENTS.md  Connections.tsx  FileManager.tsx  Terminal.tsx  TerminalWindow.tsx  Transfers.tsx
src/pages/terminal/components/: ConnectionTab.tsx  ConnectionTabs.tsx  ContextMenu.tsx  DisconnectedView.tsx  DragToNewWindowOverlay.tsx  EmptyView.tsx  LeafPane.tsx  PaneToolbar.tsx  SessionTab.tsx  ShortcutHelpModal.tsx  TerminalToolbar.tsx  index.ts
src/pages/terminal/hooks/: index.ts  useConnectionDrag.ts  useContextMenu.ts  useFullscreen.ts  useRightPanels.ts  useTerminalSearch.ts  useTerminalShortcuts.ts  useToolbarState.ts
src/services/: AGENTS.md  database.ts  historyService.ts  sftp.ts
src/services/__tests__/: database.test.ts  sftp.test.ts
src/stores/: AGENTS.md  historyStore.ts  licenseStore.ts  terminalStore.ts  themeStore.ts  transferStore.ts
src/stores/__tests__/: terminalStore.test.ts  themeStore.test.ts  transferStore.test.ts
src/styles/: global.css
src/styles/themes/: app-themes.ts  terminal-themes.ts
src/test/: placeholder.test.ts  setup.ts
src/types/: AGENTS.md  history.ts  shared.ts  theme.d.ts  theme.ts
src/utils/: TerminalManager.ts  paneUtils.ts  shellOutputParser.ts  shortcutUtils.ts  terminalSerializer.ts  transferCleanup.ts
src/utils/__tests__/: paneUtils.test.ts
tests/e2e/: connections.spec.ts  helpers.ts  navigation.spec.ts
