[package]
name = "iterminal"
version = "1.0.0"
description = "SSH Connection Manager"
authors = ["iTerminal"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.50", default-features = true }
russh-sftp = "2.0"
anyhow = "1"
once_cell = "1"
chrono = "0.4"
font-kit = "0.14"
# HTTP API Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["rt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
