[package]
name = "iterminal"
version = "1.0.5"
description = "SSH Connection Manager"
authors = ["iTerminal"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.50", default-features = true }
russh-sftp = "2.0"
anyhow = "1"
once_cell = "1"
chrono = "0.4"
font-kit = "0.14"
# HTTP API Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["rt"] }
tauri-plugin-clipboard-manager = "2.3.2"
rand = "0.8"

# 数据库和加密
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
